[package]
name = "tokio-talk-mt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "macros",
    "time",
    "sync",
    "io-util",
    "signal",
] }
futures-util = "0.3.31"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
