[package]
name = "tokio-talk-st"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.0", features = [
    "rt",
    "net",
    "macros",
    "time",
    "io-util",
    "sync",
    "signal",
    "rt-multi-thread",
] }
futures-util = "0.3"
clap = { version = "4.0", features = ["derive"] }
